--- a/exam-springboot/src/main/resources/application.yml
+++ b/exam-springboot/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/online_exam
+    url: jdbc:mysql://localhost:3306/online_exam?useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: dsj1
+    password: "000000"
     type: com.alibaba.druid.pool.DruidDataSource
   mail:
     host: smtp.qq.com  # 服务器 不用修改
