分页待完成....

--- a/exam-springboot/src/main/resources/application.yml
+++ b/exam-springboot/src/main/resources/application.yml
@@ -31,6 +31,12 @@ my-email:
 server:
   port: 80
 
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countsql
+
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
