--- a/exam-springboot/pom.xml
+++ b/exam-springboot/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!--pagehelper-->
+        <!-- 分页插件 -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.10</version>
+        </dependency>
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -70,6 +78,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
