--- a/exam-vue/package.json
+++ b/exam-vue/package.json
@@ -6,15 +6,29 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:pro": "vue-tsc && vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.5",
+    "pinia": "^2.1.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-vue": "^9.14.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.4.2"
   }
 }
