--- a/exam-springboot/pom.xml
+++ b/exam-springboot/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.76</version>
         </dependency>
+        <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.1.6</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
