--- a/exam-springboot/pom.xml
+++ b/exam-springboot/pom.xml
@@ -16,6 +16,12 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -95,6 +101,21 @@
             <scope>compile</scope>
         </dependency>
 
+
+        <!--        HanLP，分词、关键字提取-->
+        <dependency>
+            <groupId>com.hankcs</groupId>
+            <artifactId>hanlp</artifactId>
+            <version>portable-1.8.2</version>
+        </dependency>
+
+        <!--        词林关键词相似度-->
+        <dependency>
+            <groupId>com.github.shibing624</groupId>
+            <artifactId>similarity</artifactId>
+            <version>1.1.6</version>
+        </dependency>
+        <!--        句子语义相似度-->
     </dependencies>
 
     <build>
