TOKEN鉴权，生成令牌，用户信息缓存到redis

--- a/exam-springboot/pom.xml
+++ b/exam-springboot/pom.xml
@@ -105,6 +105,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 
         <!--        HanLP，分词、关键字提取-->
