--- a/exam-vue/package.json
+++ b/exam-vue/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
+    "jwt-decode": "^3.1.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
