--- a/exam-springboot/src/main/resources/application.yml
+++ b/exam-springboot/src/main/resources/application.yml
@@ -5,15 +5,15 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/online_exam
     username: root
-    password: xxxx
+    password: dsj1
     type: com.alibaba.druid.pool.DruidDataSource
   mail:
     host: smtp.qq.com  # 服务器 不用修改
-    username: xxxx
-    password: xxxx  #授权码
+    username: 2410360091@qq.com
+    password: xnkvpquqqpvwecja #授权码
     default-encoding: utf-8
     protocol: smtp
-    port: 25
+    port: 465
     properties:
       mail.smtp.socketFactory.class: javax.net.ssl.SSLSocketFactory
   redis:
